# sciencecalc-tui

./: CODE_OF_CONDUCT.md  Cargo.toml  Cargo.toml(;  LICENSE  README.md
src/: ;main.rs  ;main.rs::{,};  app.rs  input.rs  main.rs  menu.rs  ui.rs
src/kalkulasi/: fisika.rs  kimia.rs  matematika.rs  mod.rs
