[package]
name = "sciencecalc-tui"
version = "0.1.2"
edition = "2021"
authors = ["Wirandhika Maulana Akbar <randikacreator22@gmail.com>"]
description = "A terminal calculator toolkit for mathematics, physics, and chemistry in Rust. | Kalkulator Matematika, Fisika, Kimia berbasis TUI"
license = "MIT"
repository = "https://github.com/wirandhika-maulana/sciencecalc-tui"
keywords = ["math", "science", "calculator", "physics", "chemistry"]
categories = ["science", "visualization", "mathematics", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/sciencecalc-tui"

[dependencies]
chrono = "0.4.41"
clap = "4.5.41"
crossterm = "0.29.0"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = "0.29.0"
sciencecalc-rs = "0.1.0"	


